[package]
name = "replicon_test"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] }
bevy_replicon = "0.17"
serde = "1.0"
clap = { version = "4.1", features = ["derive"] } # For easy CLI reading
bevy_rapier2d = "0.22.0"

[[bin]]
name = "replicon_test_1"
path = "src/main.rs"

[[bin]]
name = "replicon_test_2"
path = "src/test_2.rs"
